Fix clear tags padding on mobile.

--- a/less/app.less
+++ b/less/app.less
@@ -592,7 +592,12 @@ h1 + #story-meta { margin-top: -11px; }
 	    	right: 0;
 	    	top: 13px;
 	    }
+    }
+}
 
+.clear-tags.hide {
+    @media screen and (max-width: @screen-sm) {
+        display: none !important;
     }
 }
 
